fix(ui): Fixed drawer padding on mobile

--- a/interface/src/components/Drawer.module.scss
+++ b/interface/src/components/Drawer.module.scss
@@ -4,5 +4,5 @@
 $basePadding: 4 * variables.$size;
 
 .drawerContent {
-  padding-bottom: env(safe-area-inset-bottom);
+  padding-bottom: calc($basePadding + env(safe-area-inset-bottom));
 }
